--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <button class="buttons" id="stop">Stop</button>
             </div>
         </section>
+        <div>Today's Track</div>
     </main>
 </body>
 <script src="./index.js"></script>
