--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
                 <button class="buttons" id="stop">Stop</button>
             </div>
         </section>
-        <div><h3>-- Today's Track --</h3></div>
+        <div><h3>-- Today's Track --</h3>
+        <p>Monday</p>
+        </div>
     </main>
 </body>
 <script src="./index.js"></script>
