--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         </section>
         <div><h3>-- Today's Track --</h3>
         <p>Monday</p>
+        <p>Tuesday</p>
         </div>
     </main>
 </body>
