--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <div><h3>-- Today's Track --</h3>
         <p>Monday</p>
         <p>Tuesday</p>
+        <p>Wednesday</p>
         </div>
     </main>
 </body>
