--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <p>Monday</p>
         <p>Tuesday</p>
         <p>Wednesday</p>
+        <p>Thursday</p>
         </div>
     </main>
 </body>
