--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <p>Tuesday</p>
         <p>Wednesday</p>
         <p>Thursday</p>
+        <p>Friday</p>
         </div>
     </main>
 </body>
