--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <p>Wednesday</p>
         <p>Thursday</p>
         <p>Friday</p>
+        <p>Saturday</p>
         </div>
     </main>
 </body>
