--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <p>Thursday</p>
         <p>Friday</p>
         <p>Saturday</p>
+        <p>Sunday</p>
         </div>
     </main>
 </body>
